--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<h1>hai good morning to angular developers</h1>
+<h1>hai good morning to angular developers</h1><div class="container-fluid">
+  <div class="row">
+    <div
+      class="col-4"
+    >
+      First Column
+    </div>
+    <div
+      class="col-4"
+    >
+      Second Column
+    </div>
+    
+  </div>
+</div>
